--- a/README
+++ b/README
@@ -1,1 +1,18 @@
-Chrome extension to remove bitcoin articles from Hacker News.
+
+Filter which provides customizable filters based on desirable or undesirable keywords on Hacker News.
+
+Example, via definition in hide.js :
+
+var filters = Object();
+	filters["default"] = 100; 
+	filters["heroku"] = 5;
+	filters["lolz"] = 600;
+	filters["python"] = 10;		
+	filters["rails"] = 45;
+
+This will show only articles with a karma score of over 100, unless one of the other keywords matches the title. If it does, it will show it if it is above the karma score listed and it will not show it if it is not.
+
+Positive example: You want to see everything with "heroku" with a karma score of 5 or above.
+Negative example: you don't want to see anything with "lolz" unless it has over 600 karma.
+
+(Inspiration and first fork from: https://github.com/davidminor/No-Bitcoin-on-HN.git)
