--- a/README
+++ b/README
@@ -4,9 +4,9 @@ Filter which provides customizable filters based on desirable or undesirable key
 Example, via definition in filter.js :
 
 var filters = Object();
-	filters["default"] = 100; 
-	filters["heroku"] = 5;
-	filters["lolz"] = 600;
+	filters["default"] = 100; # default min score
+	filters["heroku"] = 5; # min score for specific desirable keyword
+	filters["lolz"] = 600; # min score for specific undesirable keyword
 
 This will show only articles with a karma score of over 100, unless one of the other keywords matches the title. If it does, it will show it if it is above the karma score listed and it will not show it if it is not.
 
