--- a/README
+++ b/README
@@ -5,16 +5,17 @@ Example, via definition in filter.js :
 
 var filters = Object();
 	filters["default"] = 100; # default min score
-	filters["heroku"] = 5; # min score for specific desirable keyword
-	filters["lolz"] = 600; # min score for specific undesirable keyword
+	filters["clojure"] = 5; # min score for specific desirable keyword
+	filters["bitcoin"] = 600; # min score for specific undesirable keyword
 
 This will show only articles with a karma score of over 100, unless one of the other keywords matches the title. If it does, it will show it if it is above the karma score listed and it will not show it if it is not.
 
-Positive example: You want to see everything with "heroku" with a karma score of 5 or above.
-Negative example: you don't want to see anything with "lolz" unless it has over 600 karma.
+Positive example: You want to see everything with "clojure" with a karma score of 5 or above.
+Negative example: you don't want to see anything with "bitcoin" unless it has over 600 karma.
+
+The filters are applied in the order they appear, meaning that the last filter you apply will take precedence. 
 
 (Inspiration and first fork from: https://github.com/davidminor/No-Bitcoin-on-HN.git)
-
 
 
 
