--- a/README.textile
+++ b/README.textile
@@ -7,8 +7,8 @@ bq. { "default" : 100, "clojure" : 5, "bitcoin" : 250 }
 
 This will show only articles with a karma score of over 100, unless one of the other keywords matches the title. If it does, it will show it if it is above the karma score listed. If not, it will not show it.
 
-Example (positive): You want to see everything with "clojure" with a karma score of 5 or above.
-Example (negative): you don't want to see anything with "bitcoin" unless it has over 250 karma.
+*Example (positive):* You want to see everything with "clojure" with a karma score of 5 or above.
+*Example (negative):* you don't want to see anything with "bitcoin" unless it has over 250 karma.
 
 The filters are applied in the order they appear, meaning that the last filter you apply will take precedence. 
 
@@ -16,7 +16,7 @@ At the moment this is also setup to display eight pages of articles at once. Thi
 
 Author: "Jd":http://news.ycombinator.com/user?id=Jd ("@fractastical":https://twitter.com/fractastical)
 
-(Inspiration and first fork from No-Bitcoin-on-HN:"https://github.com/davidminor/No-Bitcoin-on-HN.git")
+Inspiration and first fork from "No-Bitcoin-on-HN":https://github.com/davidminor/No-Bitcoin-on-HN.git
 
 
 
